--- a/templates/login.html
+++ b/templates/login.html
@@ -26,7 +26,7 @@
         
         h1 {
             text-align: center;
-            color: #4CAF50;
+            color: #2196F3;
             margin-bottom: 30px;
         }
         
@@ -50,7 +50,7 @@
         }
         
         button {
-            background-color: #4CAF50;
+            background-color: #2196F3;
             color: white;
             border: none;
             padding: 12px;
@@ -61,7 +61,7 @@
         }
         
         button:hover {
-            background-color: #45a049;
+            background-color: #0b7dda;
         }
         
         .register-link {
@@ -70,7 +70,7 @@
         }
         
         .register-link a {
-            color: #4CAF50;
+            color: #2196F3;
             text-decoration: none;
         }
         
